# petrobot

./: .gitignore  Cargo.toml  README.md  roommates.csv
data/: roommates.csv
src/: dao.rs  main.rs
