[package]
name = "petrobot"
version = "0.1.0"
authors = ["ossel","alexfict"]

[dependencies]
rand = "0.4.0"
telegram-bot = "0.6"
tokio-core = "0.1"
futures = "0.1"
chrono = "0.4"
log = "0.4.3"
log4rs = "0.8.0"

[dependencies.hyper]
version = "0.11"
optional = true

[dependencies.hyper-tls]
version = "0.1"
optional = true
